add bitcoin currency

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <select class="select" id = "select-moedas">
             <option><b>US$ Dolar</b></option>
             <option><b>€ Euro</b></option>
+            <option><b>Bitcoin</b></option>
         </select>
 
 
